# clippings

./: .gitignore  LICENSE  Makefile  README.md  clippings.cabal  kindle-clippings.cabal
Text/Kindle/: Clippings.hs
Text/Kindle/Clippings/: Parser.hs  Reader.hs  Types.hs  Writer.hs
examples/: Clippings2TSV.hs
examples/clippings2tsv/: Main.hs
examples/clippings2tsv/Control/Applicative/: Extras.hs
examples/clippings2tsv/Data/: Card.hs
examples/clippings2tsv/Data/Csv/: Extras.hs
examples/clippings2tsv/Data/Either/: Extras.hs
examples/clippings2tsv/Data/List/: Extras.hs
src/Data/Functor/: Extras.hs
src/Data/String/: Extras.hs
src/Text/Kindle/Clippings/: Reader.hs  Types.hs  Writer.hs
src/Text/Parsec/Combinator/: Extras.hs
tests/: Reader.hs
tests/fixtures/: brackets.txt  clipping.txt  nested_brackets.txt  pw2clipping.txt  pw2pdfclipping.txt  pw2simplepdfclipping.txt
