name:                kindle-clippings
version:             0.1.1
synopsis:            A parser for Kindle-format clipping files.
author:              Vikram Verma <me@vikramverma.com>
maintainer:          Vikram Verma <me@vikramverma.com>
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules: Text.Kindle.Clippings Text.Kindle.Clippings.Reader Text.Kindle.Clippings.Writer Text.Kindle.Clippings.Types
  build-depends:        
    base ==4.6.*,
    time,
    parsec,
    old-locale,
    strptime,
    ansi-terminal,
    data-default
